--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
 	const urlParams = new URLSearchParams(window.location.search);
 	const to = urlParams.get('to');
-	$('#id-group').val(to)
+	$('#id-group').html(to)
 
 
 	/********************** Copy to Clipboard **********************/
