--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/MasGalih.png" alt="groom" class="img-responsive">
+						<img src="images/MasGalih.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
 						<h3>Galih Endrayana Sudarno</h3>
